--- a/src/app/user/home/home.html
+++ b/src/app/user/home/home.html
@@ -1,1 +1,96 @@
-<p>home works!</p>
+<section class="videos">
+    <h1 class="video-title">Story of Breath</h1>
+    <video src="/videos/heders.mp4" muted autoplay loop playsinline></video>
+
+</section>
+
+<section class="main-video" #mainVideos>
+
+    <div class="layout">
+        <div class="video">
+            <video src="videos/RASH9805.mp4" muted autoplay loop playsinline></video>
+        </div>
+        <div>
+            <h3>About Elena</h3>
+            <p>With over 8 years of experience in wedding cinematography, I specialize in creating timeless, cinematic
+                love stories that capture the authentic emotions of your special day.</p>
+        </div>
+    </div>
+
+</section>
+
+<section class="video-container">
+
+    <div class="video-section">
+
+        <div>
+            <div class="video">
+                <video src="videos/RASH9805.mp4" muted loop (mouseenter)="onPlay($event)"
+                    (mouseleave)="onPause($event)">
+                </video>
+            </div>
+            <h5>Lorem ipsum dolor.</h5>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos numquam, debitis libero ullam iusto aliquid
+                earum dolorem. Eaque beatae laboriosam incidunt inventore nostrum debitis in explicabo, numquam adipisci
+                tempore eos.</p>
+        </div>
+        <div>
+            <div class="video">
+                <video src="videos/RASH9805.mp4" muted loop (mouseenter)="onPlay($event)"
+                    (mouseleave)="onPause($event)">
+                </video>
+            </div>
+            <h5>Lorem ipsum dolor.</h5>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos numquam, debitis libero ullam iusto aliquid
+                earum dolorem. Eaque beatae laboriosam incidunt inventore nostrum debitis in explicabo, numquam adipisci
+                tempore eos.</p>
+        </div>
+        <div>
+            <div class="video">
+                <video src="videos/RASH9805.mp4" muted loop (mouseenter)="onPlay($event)"
+                    (mouseleave)="onPause($event)">
+                </video>
+            </div>
+            <h5>Lorem ipsum dolor.</h5>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos numquam, debitis libero ullam iusto aliquid
+                earum dolorem. Eaque beatae laboriosam incidunt inventore nostrum debitis in explicabo, numquam adipisci
+                tempore eos.</p>
+        </div>
+        <div>
+            <div class="video">
+                <video src="videos/RASH9805.mp4" muted loop (mouseenter)="onPlay($event)"
+                    (mouseleave)="onPause($event)">
+                </video>
+            </div>
+            <h5>Lorem ipsum dolor.</h5>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos numquam, debitis libero ullam iusto aliquid
+                earum dolorem. Eaque beatae laboriosam incidunt inventore nostrum debitis in explicabo, numquam adipisci
+                tempore eos.</p>
+        </div>
+        <div>
+            <div class="video">
+                <video src="videos/RASH9805.mp4" muted loop (mouseenter)="onPlay($event)"
+                    (mouseleave)="onPause($event)">
+                </video>
+
+            </div>
+            <h5>Lorem ipsum dolor.</h5>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos numquam, debitis libero ullam iusto aliquid
+                earum dolorem. Eaque beatae laboriosam incidunt inventore nostrum debitis in explicabo, numquam adipisci
+                tempore eos.</p>
+        </div>
+        <div>
+            <div class="video">
+                <video src="videos/RASH9805.mp4" muted loop (mouseenter)="onPlay($event)"
+                    (mouseleave)="onPause($event)">
+                </video>
+            </div>
+            <h5>Lorem ipsum dolor.</h5>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos numquam, debitis libero ullam iusto aliquid
+                earum dolorem. Eaque beatae laboriosam incidunt inventore nostrum debitis in explicabo, numquam adipisci
+                tempore eos.</p>
+        </div>
+
+    </div>
+
+</section>
