--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,1 +1,23 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('./_variable.scss');
+
+* {
+    box-sizing: border-box;
+    padding: 0px;
+    margin: 0px;
+    scroll-behavior: smooth;
+    font-family: "Rubik", sans-serif;
+
+    ::-webkit-scrollbar {
+        display: none;
+    }
+}
+
+html,
+body {
+    height: 100%;
+    width: 100%;
+}
+
+body {
+    position: relative;
+}
